<resources>

    <string name="app_name">Rasta Trains</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="createaccount"> Create an Account</string>
    <string name="createLabel"> Create Account</string>
    <string name="createacctext"> Making a new account is very easy, just follow the steps.</string>
    <string name="next">Next</string>
    <string name="forgottenpassword">Forgotten Password?</string>
    <string name="Whatisyourname">What\'s your Name?</string>
    <string name="errormessage">Please enter a first name and a last name</string>
    <string name="errormessageemail">Please enter a valid email address</string>
    <string name="whatisyouremail">What\'s your Email Address?</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailaddress">Email Address</string>
    <string name="enterpassword">Please enter a Password</string>
    <string name="enterpassword1">Enter Password</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="errorpassword">Please enter more than 5 characters</string>
    <string name="confirmtext">Congratulations!</string>
    <string name="confrimdialog">Your new account has been created, a confirmation email will be sent to the email address associated with the account, Press Search to continue.</string>
    <string name="searchbutton">Search</string>

    <string-array name="ticketType">
        <item>Single</item>
        <item>Return</item>
        <item>Open Return</item>
    </string-array>
    <string name="title_activity_name">Name</string>
</resources>
